# media-api

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  tst
app/: __init__.py  auth.py  file_storage.py  middleware.py  settings.py
app/routers/: __init__.py  audio.py  health.py  video.py
tests/: test_file_storage.py
