[tool.poetry]
name = "media-api"
version = "0.5"
description = "FFMPEG libraries rest API in python"
authors = ["Jani Šumak <jani.sumak@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
