[tool.poetry]
name = "media-api"
version = "0.5"
description = "FFMPEG libraries rest API in python"
authors = ["Jani Šumak <jani.sumak@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
pre-commit = "^2.10.1"
mypy = "^0.812"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
